[package]
name = "surreality-server"
version = "0.1.0"
edition = "2021"
authors = ["Xavier2p <https://github.com/Xavier2p>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0.183", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
