[package]
name = "surreality-api"
version = "0.1.0"
edition = "2021"
authors = ["Xavier2p <https://github.com/Xavier2p>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
serde = { version = "1.0.183", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.29.1", features = ["full", "macros", "rt-multi-thread"] }
