[package]
name = "surreality-server"
version = "0.1.0"
edition = "2021"
authors = ["Xavier2p <https://github.com/Xavier2p>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = "0.7.1"
tokio = { version = "1.29.1", features = ["full", "macros", "rt-multi-thread"] }
rocket = { version = "=0.5.0-rc.3", features = ["secrets"] }
surrealdb = "1.0.0-beta.9"
serde = { version = "1.0.183", features = ["derive"] }
